simplek8s/server-deployment.yaml
# set up the express server
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector: 
        matchLabels:
            component: server
    template: 
        metadata: 
            labels: 
                component: server
        spec: 
            containers:
                - name: server
                  image: alexbr9007/multi-images-server
                  ports: 
                      - containerPort: 5000
